all pages completely responsive

--- a/pages/welcome.html
+++ b/pages/welcome.html
@@ -108,7 +108,7 @@
 
 
   <div class="searchBar">
-    <input type="text" placeholder="Search for products..">
+    <input type="text" placeholder="Search for cars..">
     <button class="searchBtn">Search</button>
   </div>
 
