--- a/pages/rentingCars.html
+++ b/pages/rentingCars.html
@@ -1,40 +1,584 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="../CSS/rentCars.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css"
-    integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA=="
-    crossorigin="anonymous" referrerpolicy="no-referrer" />
+        integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA=="
+        crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
+
 <body>
+
+    <div class="responsiveNav">
+        <ul>
+            <li><a href="welcome.html">Home</a></li>
+            <li><a href="sellingCars.html">Buy Car</a></li>
+            <li><a href="rentingCars.html">Rent Car</a></li>
+            <li><a href="profile.html">Profile</a></li>
+            <li><a href="">Cart</a></li>
+        </ul>
+
+    </div>
     <nav>
 
 
+        </div>
+        <button class="menu" id="menu">
+            <i class="fa-solid fa-bars"></i>
+        </button>
+
+
+        <img src="../images//logo.png" alt="">
+        <div class="navItems">
+            <ul>
+
+                <li><a href="welcome.html">Home</a></li>
+                <li><a href="sellingCars.html">Buy Car</a></li>
+                <li><a href="rentingCars.html">Rent Car</a></li>
+            </ul>
+        </div>
+        <div class="profile">
+            <i class="fa-solid fa-cart-shopping"></i>
+            <a href="">
+                <i class="fa-solid fa-user"></i>
+                userName here
+            </a>
+
+        </div>
+    </nav>
+
+    <div class="searchBar">
+        <input type="text" placeholder="Search for car you want in rent...">
+        <button class="search">Search</button>
     </div>
-    <button class="menu">
-      <i class="fa-solid fa-bars"></i>
-    </button>
 
 
-    <img src="../images//logo.png" alt="">
-    <div class="navItems">
-      <ul>
 
-        <li><a href="welcome.html">Home</a></li>
-        <li><a href="sellingCars.html">Buy Car</a></li>
-        <li><a href="rentingCars.html">Rent Car</a></li>
-      </ul>
-    </div>
-    <div class="profile">
-      <i class="fa-solid fa-cart-shopping"></i>
-      <a href="">
-        <i class="fa-solid fa-user"></i>
-        userName here
-      </a>
+    <div class="bar">
+        <div class="categoryButtons">
+
+            <button id="luxury" class="categoryButton">Luxury</button>
+            <button id="minivans" class="categoryButton">Minivans</button>
+            <button id="economy" class="categoryButton">Economy Cars</button>
+
+        </div>
 
     </div>
-  </nav>
+
+    <h1 class="heading"> Economy Cars For Rent </h1>
+
+    <section class="cars" id="luxuryContainer">
+        <div class="car">
+            <img src="../images/car (5).jpg" alt="">
+            <div class="details">
+                <h1> <a href="">Mercedes EQE 350</a> </h1>
+                <p></p>
+                <p>120$</p>
+
+                <div class="carBtn">
+                    <button class="addCrt">
+                        Book Now
+                    </button>
+                    <button class="buy">
+                        Rent Now
+                    </button>
+                </div>
+            </div>
+        </div>
+        <div class="car">
+            <img src="../images/car (6).jpg" alt="">
+            <div class="details">
+                <h1> <a href="">PAudi Q6</a> </h1>
+                <p></p>
+                <p>190$</p>
+
+                <div class="carBtn">
+                    <button class="addCrt">
+                        Book Now
+                    </button>
+                    <button class="buy">
+                        Rent Now
+                    </button>
+                </div>
+            </div>
+        </div>
+        <div class="car">
+            <img src="../images/car (7).jpg" alt="">
+            <div class="details">
+                <h1> <a href="">Hyundai Palisade</a> </h1>
+                <p></p>
+                <p>150$</p>
+
+                <div class="carBtn">
+                    <button class="addCrt">
+                        Book Now
+                    </button>
+                    <button class="buy">
+                        Rent Now
+                    </button>
+                </div>
+            </div>
+        </div>
+        <div class="car">
+            <img src="../images/car (8).jpg" alt="">
+            <div class="details">
+                <h1> <a href="">Honda Accord</a> </h1>
+                <p></p>
+                <p>180$</p>
+
+                <div class="carBtn">
+                    <button class="addCrt">
+                        Book Now
+                    </button>
+                    <button class="buy">
+                        Rent Now
+                    </button>
+                </div>
+            </div>
+        </div>
+        <div class="car">
+            <img src="../images/Audi A8.jpg" alt="">
+            <div class="details">
+                <h1> <a href="">Audi A8</a> </h1>
+                <p></p>
+                <p>180$</p>
+
+                <div class="carBtn">
+                    <button class="addCrt">
+                        Book Now
+                    </button>
+                    <button class="buy">
+                        Rent Now
+                    </button>
+                </div>
+            </div>
+        </div>
+        <div class="car">
+            <img src="../images/Lexus LS.avif" alt="">
+            <div class="details">
+                <h1> <a href="">Lexus LS</a> </h1>
+                <p></p>
+                <p>180$</p>
+
+                <div class="carBtn">
+                    <button class="addCrt">
+                        Book Now
+                    </button>
+                    <button class="buy">
+                        Rent Now
+                    </button>
+                </div>
+            </div>
+        </div>
+        <div class="car">
+            <img src="../images/Rolls-Royce Phantom.jpg" alt="">
+            <div class="details">
+                <h1> <a href="">Rolls-Royce Phantom</a> </h1>
+                <p></p>
+                <p>180$</p>
+
+                <div class="carBtn">
+                    <button class="addCrt">
+                        Book Now
+                    </button>
+                    <button class="buy">
+                        Rent Now
+                    </button>
+                </div>
+            </div>
+        </div>
+        <div class="car">
+            <img src="../images/BMW 7 Series.webp" alt="">
+            <div class="details">
+                <h1> <a href="">BMW 7 Series</a> </h1>
+                <p></p>
+                <p>180$</p>
+
+                <div class="carBtn">
+                    <button class="addCrt">
+                        Book Now
+                    </button>
+                    <button class="buy">
+                        Rent Now
+                    </button>
+                </div>
+            </div>
+        </div>
+
+    </section>
+
+    <h1 class="heading"> Minivans For rent </h1>
+
+    <section class="cars" id="minivansContainer">
+        <div class="car">
+            <img src="../images/kiacarnival.jpg" alt="">
+            <div class="details">
+                <h1> <a href="">kia carnival</a> </h1>
+                <p></p>
+                <p>120$</p>
+
+                <div class="carBtn">
+                    <button class="addCrt">
+                        Book Now
+                    </button>
+                    <button class="buy">
+                        Rent Now
+                    </button>
+                </div>
+            </div>
+        </div>
+        <div class="car">
+            <img src="../images/Nissan Quest.jpeg" alt="">
+            <div class="details">
+                <h1> <a href="">Nissan Quest</a> </h1>
+                <p></p>
+                <p>190$</p>
+
+                <div class="carBtn">
+                    <button class="addCrt">
+                        Book Now
+                    </button>
+                    <button class="buy">
+                        Rent Now
+                    </button>
+                </div>
+            </div>
+        </div>
+        <div class="car">
+            <img src="../images/Dodge Grand Caravan.jpg" alt="">
+            <div class="details">
+                <h1> <a href="">Dodge Grand Caravan</a> </h1>
+                <p></p>
+                <p>150$</p>
+
+                <div class="carBtn">
+                    <button class="addCrt">
+                        Book Now
+                    </button>
+                    <button class="buy">
+                        Rent Now
+                    </button>
+                </div>
+            </div>
+        </div>
+        <div class="car">
+            <img src="../images/Honda Odyssey.jpg" alt="">
+            <div class="details">
+                <h1> <a href="">Honda Odyssey</a> </h1>
+                <p></p>
+                <p>180$</p>
+
+                <div class="carBtn">
+                    <button class="addCrt">
+                        Book Now
+                    </button>
+                    <button class="buy">
+                        Rent Now
+                    </button>
+                </div>
+            </div>
+        </div>
+        <div class="car">
+            <img src="../images/Toyota Sienna.webp" alt="">
+            <div class="details">
+                <h1> <a href="">Toyota Sienna</a> </h1>
+                <p></p>
+                <p>180$</p>
+
+                <div class="carBtn">
+                    <button class="addCrt">
+                        Book Now
+                    </button>
+                    <button class="buy">
+                        Rent Now
+                    </button>
+                </div>
+            </div>
+        </div>
+        <div class="car">
+            <img src="../images/Chrysler Pacifica.webp" alt="">
+            <div class="details">
+                <h1> <a href="">Chrysler Pacifica</a> </h1>
+                <p></p>
+                <p>180$</p>
+
+                <div class="carBtn">
+                    <button class="addCrt">
+                        Book Now
+                    </button>
+                    <button class="buy">
+                        Rent Now
+                    </button>
+                </div>
+            </div>
+        </div>
+        <div class="car">
+            <img src="../images/Volkswagen Routan.webp" alt="">
+            <div class="details">
+                <h1> <a href="">Volkswagen Routan</a> </h1>
+                <p></p>
+                <p>180$</p>
+
+                <div class="carBtn">
+                    <button class="addCrt">
+                        Book Now
+                    </button>
+                    <button class="buy">
+                        Rent Now
+                    </button>
+                </div>
+            </div>
+        </div>
+        <div class="car">
+            <img src="../images/Ford Transit Connect.jpg" alt="">
+            <div class="details">
+                <h1> <a href="">Ford Transit Connect</a> </h1>
+                <p></p>
+                <p>180$</p>
+
+                <div class="carBtn">
+                    <button class="addCrt">
+                        Book Now
+                    </button>
+                    <button class="buy">
+                        Rent Now
+                    </button>
+                </div>
+            </div>
+        </div>
+
+    </section>
+
+    <h1 class="heading"> Economy Cars For rent </h1>
+    <section class="cars" id="economyContainer">
+        <div class="car">
+            <img src="../images/Kia Rio.jpg" alt="">
+            <div class="details">
+                <h1> <a href="">Kia Riol</a> </h1>
+                <p></p>
+                <p>120$</p>
+
+                <div class="carBtn">
+                    <button class="addCrt">
+                        Book Now
+                    </button>
+                    <button class="buy">
+                        Rent Now
+                    </button>
+                </div>
+            </div>
+        </div>
+        <div class="car">
+            <img src="../images/Volkswagen Polo.webp" alt="">
+            <div class="details">
+                <h1> <a href="">Volkswagen Polo</a> </h1>
+                <p></p>
+                <p>190$</p>
+
+                <div class="carBtn">
+                    <button class="addCrt">
+                        Book Now
+                    </button>
+                    <button class="buy">
+                        Rent Now
+                    </button>
+                </div>
+            </div>
+        </div>
+        <div class="car">
+            <img src="../images/Chevrolet Spark.jpg" alt="">
+            <div class="details">
+                <h1> <a href="">Chevrolet Spark</a> </h1>
+                <p></p>
+                <p>150$</p>
+
+                <div class="carBtn">
+                    <button class="addCrt">
+                        Book Now
+                    </button>
+                    <button class="buy">
+                        Rent Now
+                    </button>
+                </div>
+            </div>
+        </div>
+        <div class="car">
+            <img src="../images/Ford Fiesta.jpg" alt="">
+            <div class="details">
+                <h1> <a href="">Ford Fiesta</a> </h1>
+                <p></p>
+                <p>180$</p>
+
+                <div class="carBtn">
+                    <button class="addCrt">
+                        Book Now
+                    </button>
+                    <button class="buy">
+                        Rent Now
+                    </button>
+                </div>
+            </div>
+        </div>
+        <div class="car">
+            <img src="../images/Nissan Sentra.webp" alt="">
+            <div class="details">
+                <h1> <a href="">Nissan Sentra</a> </h1>
+                <p></p>
+                <p>180$</p>
+
+                <div class="carBtn">
+                    <button class="addCrt">
+                        Book Now
+                    </button>
+                    <button class="buy">
+                        Rent Now
+                    </button>
+                </div>
+            </div>
+        </div>
+        <div class="car">
+            <img src="../images/Hyundai Elantra.jpg" alt="">
+            <div class="details">
+                <h1> <a href="">Hyundai Elantra</a> </h1>
+                <p></p>
+                <p>180$</p>
+
+                <div class="carBtn">
+                    <button class="addCrt">
+                        Book Now
+                    </button>
+                    <button class="buy">
+                        Rent Now
+                    </button>
+                </div>
+            </div>
+        </div>
+        <div class="car">
+            <img src="../images/Toyota Corolla.avif" alt="">
+            <div class="details">
+                <h1> <a href="">Toyota Corolla</a> </h1>
+                <p></p>
+                <p>180$</p>
+
+                <div class="carBtn">
+                    <button class="addCrt">
+                        Book Now
+                    </button>
+                    <button class="buy">
+                        Rent Now
+                    </button>
+                </div>
+            </div>
+        </div>
+        <div class="car">
+            <img src="../images/Ford Transit Connect.jpg" alt="">
+            <div class="details">
+                <h1> <a href="">Ford Transit Connect</a> </h1>
+                <p></p>
+                <p>180$</p>
+
+                <div class="carBtn">
+                    <button class="addCrt">
+                        Book Now
+                    </button>
+                    <button class="buy">
+                        Rent Now
+                    </button>
+                </div>
+            </div>
+        </div>
+
+    </section>
+
+
+    <footer>
+        <div class="footerLeft">
+            <img src="../images//logo.png" alt="">
+            <p>Your Car, Your Journey</p>
+        </div>
+        <div class="footerRight">
+            <div class="footerUpper">
+                <ul>
+                    <li>About Us</li>
+                    <li>How it works</li>
+                    <li>Services</li>
+                    <li>Contact</li>
+                    <li>Why us?</li>
+                    <li>signup</li>
+                </ul>
+            </div>
+
+
+            <div class="footerLower">
+
+            </div>
+        </div>
+        <div class="socials">
+            <p>Follow us on our social medias</p>
+            <div class="icons">
+                <i class="fa-brands fa-facebook"></i>
+                <i class="fa-brands fa-instagram"></i>
+                <i class="fa-brands fa-discord"></i>
+                <i class="fa-brands fa-twitter"></i>
+            </div>
+
+
+    </footer>
+
+    <script>
+        document.addEventListener('DOMContentLoaded', function () {
+            const categoryButtons = document.querySelectorAll('.categoryButton');
+
+            categoryButtons.forEach(button => {
+                button.addEventListener('click', function () {
+
+                    categoryButtons.forEach(btn => {
+                        btn.classList.remove('active');
+                    });
+
+                    button.classList.add('active');
+
+                    const containerId = button.id + 'Container';
+                    const container = document.getElementById(containerId);
+                    container.scrollIntoView({ behavior: 'smooth' });
+                });
+            });
+        });
+
+
+        document.addEventListener("DOMContentLoaded", function () {
+            var menuBtn = document.getElementById("menu");
+            var nav = document.querySelector(".responsiveNav");
+
+
+            function toggleNav() {
+                if (nav.style.display === "flex") {
+                    nav.style.display = "none";
+                } else {
+                    nav.style.display = "flex";
+                }
+            }
+
+
+            menuBtn.addEventListener("click", function (event) {
+                event.stopPropagation();
+                toggleNav();
+            });
+
+
+            document.addEventListener("click", function (event) {
+                if (event.target !== nav && event.target !== menuBtn && !nav.contains(event.target)) {
+                    nav.style.display = "none";
+                }
+            });
+        });
+
+    </script>
+
 </body>
+
 </html>
