--- a/pages/sellingCars.html
+++ b/pages/sellingCars.html
@@ -5,21 +5,30 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="sellingCars.css">
+    <link rel="stylesheet" href="../CSS/sellingCars.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css"
         integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
 
 <body>
+
+
+    <div class="responsiveNav">
+        <ul>
+            <li><a href="welcome.html">Home</a></li>
+            <li><a href="sellingCars.html">Buy Car</a></li>
+            <li><a href="rentingCars.html">Rent Car</a></li>
+            <li><a href="profile.html">Profile</a></li>
+            <li><a href="">Cart</a></li>
+        </ul>
+
+    </div>
+
     <nav>
-
-
-        </div>
-        <button class="menu">
+        <button class="menu" id="menu">
             <i class="fa-solid fa-bars"></i>
         </button>
-
 
         <img src="../images//logo.png" alt="">
         <div class="navItems">
@@ -34,11 +43,440 @@
             <i class="fa-solid fa-cart-shopping"></i>
             <a href="">
                 <i class="fa-solid fa-user"></i>
-                userName here
+                User Name
             </a>
-
         </div>
     </nav>
+
+
+
+    <div class="searchBar">
+        <input type="text" placeholder="Search for cars...">
+        <button class="search">Search</button>
+    </div>
+
+
+
+    <div class="bar">
+        <div class="categoryButtons">
+
+            <button id="ev" class="categoryButton">EV</button>
+            <button id="sedan" class="categoryButton">Sedan</button>
+            <button id="suv" class="categoryButton">SUV</button>
+
+        </div>
+
+    </div>
+
+    <h1 class="heading">  EV for sale </h1>
+    <div class="cars " id="evContainer">
+        <div class="car">
+            <img src="../images/nissanleaf.jpg" alt="">
+            <div class="details">
+                <h1> <a href="">Nissan LEAF</a> </h1>
+                <p></p>
+                <p>28,140$</p>
+
+                <div class="carBtn">
+                    <button class="addCrt">
+                        Add to Cart
+                    </button>
+                    <button class="buy">
+                        Buy Now
+                    </button>
+                </div>
+            </div>
+        </div>
+        <div class="car">
+            <img src="../images/bolt ev.jpg" alt="">
+            <div class="details">
+                <h1> <a href="">Chevrolet Bolt EV</a> </h1>
+                <p></p>
+                <p>32,120$</p>
+
+                <div class="carBtn">
+                    <button class="addCrt">
+                        Add to Cart
+                    </button>
+                    <button class="buy">
+                        Buy Now
+                    </button>
+                </div>
+            </div>
+        </div>
+        <div class="car">
+            <img src="../images/Audi e-tron.jpg" alt="">
+            <div class="details">
+                <h1> <a href="">Audi e-tron</a> </h1>
+                <p></p>
+                <p>58,200$</p>
+
+                <div class="carBtn">
+                    <button class="addCrt">
+                        Add to Cart
+                    </button>
+                    <button class="buy">
+                        Buy Now
+                    </button>
+                </div>
+            </div>
+        </div>
+        <div class="car">
+            <img src="../images/Porsche Taycan.jpg" alt="">
+            <div class="details">
+                <h1> <a href="">Porsche Taycan</a> </h1>
+                <p></p>
+                <p>99,400$</p>
+
+                <div class="carBtn">
+                    <button class="addCrt">
+                        Add to Cart
+                    </button>
+                    <button class="buy">
+                        Buy Now
+                    </button>
+                </div>
+            </div>
+        </div>
+        <div class="car">
+            <img src="../images/39,895.jpg" alt="">
+            <div class="details">
+                <h1> <a href="">Mercedes EQE 350</a> </h1>
+                <p></p>
+                <p>39,895$</p>
+
+                <div class="carBtn">
+                    <button class="addCrt">
+                        Add to Cart
+                    </button>
+                    <button class="buy">
+                        Buy Now
+                    </button>
+                </div>
+            </div>
+        </div>
+        <div class="car">
+            <img src="../images/Volkswagen ID.4.jpg" alt="">
+            <div class="details">
+                <h1> <a href="">Volkswagen ID.4</a> </h1>
+                <p></p>
+                <p>54,600$</p>
+
+                <div class="carBtn">
+                    <button class="addCrt">
+                        Add to Cart
+                    </button>
+                    <button class="buy">
+                        Buy Now
+                    </button>
+                </div>
+            </div>
+        </div>
+
+
+    </div>
+
+    <h1 class="heading">  Sedan for sale </h1>
+    <div class="cars " id="sedanContainer">
+        <div class="car">
+            <img src="../images/Mercedes-Benz E-Class.jpg" alt="">
+            <div class="details">
+                <h1> <a href="">Mercedes-Benz E-Class</a> </h1>
+                <p></p>
+                <p>28,140$</p>
+
+                <div class="carBtn">
+                    <button class="addCrt">
+                        Add to Cart
+                    </button>
+                    <button class="buy">
+                        Buy Now
+                    </button>
+                </div>
+            </div>
+        </div>
+        <div class="car">
+            <img src="../images/Volkswagen Passat.jpg" alt="">
+            <div class="details">
+                <h1> <a href="">Volkswagen Passat</a> </h1>
+                <p></p>
+                <p>32,120$</p>
+
+                <div class="carBtn">
+                    <button class="addCrt">
+                        Add to Cart
+                    </button>
+                    <button class="buy">
+                        Buy Now
+                    </button>
+                </div>
+            </div>
+        </div>
+        <div class="car">
+            <img src="../images/BMW 3 Series.avif" alt="">
+            <div class="details">
+                <h1> <a href="">BMW 3 Series</a> </h1>
+                <p></p>
+                <p>58,200$</p>
+
+                <div class="carBtn">
+                    <button class="addCrt">
+                        Add to Cart
+                    </button>
+                    <button class="buy">
+                        Buy Now
+                    </button>
+                </div>
+            </div>
+        </div>
+        <div class="car">
+            <img src="../images/Mazda6.jpg" alt="">
+            <div class="details">
+                <h1> <a href="">Mazda6</a> </h1>
+                <p></p>
+                <p>99,400$</p>
+
+                <div class="carBtn">
+                    <button class="addCrt">
+                        Add to Cart
+                    </button>
+                    <button class="buy">
+                        Buy Now
+                    </button>
+                </div>
+            </div>
+        </div>
+        <div class="car">
+            <img src="../images/Honda Accord.jpg" alt="">
+            <div class="details">
+                <h1> <a href="">Honda Accord</a> </h1>
+                <p></p>
+                <p>39,895$</p>
+
+                <div class="carBtn">
+                    <button class="addCrt">
+                        Add to Cart
+                    </button>
+                    <button class="buy">
+                        Buy Now
+                    </button>
+                </div>
+            </div>
+        </div>
+        <div class="car">
+            <img src="../images/Toyota Camry.jpg" alt="">
+            <div class="details">
+                <h1> <a href="">Toyota Camry</a> </h1>
+                <p></p>
+                <p>54,600$</p>
+
+                <div class="carBtn">
+                    <button class="addCrt">
+                        Add to Cart
+                    </button>
+                    <button class="buy">
+                        Buy Now
+                    </button>
+                </div>
+            </div>
+        </div>
+
+
+    </div>
+
+    <h1 class="heading"> SUV for sale </h1>
+    <div class="cars " id="suvContainer">
+        <div class="car">
+            <img src="../images/Lexus RX.jpg" alt="">
+            <div class="details">
+                <h1> <a href="">Lexus RX</a> </h1>
+                <p></p>
+                <p>28,140$</p>
+
+                <div class="carBtn">
+                    <button class="addCrt">
+                        Add to Cart
+                    </button>
+                    <button class="buy">
+                        Buy Now
+                    </button>
+                </div>
+            </div>
+        </div>
+        <div class="car">
+            <img src="../images/Subaru Outback.avif" alt="">
+            <div class="details">
+                <h1> <a href="">Subaru Outback</a> </h1>
+                <p></p>
+                <p>32,120$</p>
+
+                <div class="carBtn">
+                    <button class="addCrt">
+                        Add to Cart
+                    </button>
+                    <button class="buy">
+                        Buy Now
+                    </button>
+                </div>
+            </div>
+        </div>
+        <div class="car">
+            <img src="../images/Ford Explorer.jpg" alt="">
+            <div class="details">
+                <h1> <a href="">Ford Explorer</a> </h1>
+                <p></p>
+                <p>58,200$</p>
+
+                <div class="carBtn">
+                    <button class="addCrt">
+                        Add to Cart
+                    </button>
+                    <button class="buy">
+                        Buy Now
+                    </button>
+                </div>
+            </div>
+        </div>
+        <div class="car">
+            <img src="../images/Toyota RAV4.avif" alt="">
+            <div class="details">
+                <h1> <a href="">Toyota RAV4</a> </h1>
+                <p></p>
+                <p>99,400$</p>
+
+                <div class="carBtn">
+                    <button class="addCrt">
+                        Add to Cart
+                    </button>
+                    <button class="buy">
+                        Buy Now
+                    </button>
+                </div>
+            </div>
+        </div>
+        <div class="car">
+            <img src="../images/Jeep Grand Cherokee.jpg" alt="">
+            <div class="details">
+                <h1> <a href="">Jeep Grand Cherokee</a> </h1>
+                <p></p>
+                <p>39,895$</p>
+
+                <div class="carBtn">
+                    <button class="addCrt">
+                        Add to Cart
+                    </button>
+                    <button class="buy">
+                        Buy Now
+                    </button>
+                </div>
+            </div>
+        </div>
+        <div class="car">
+            <img src="../images/Volkswagen ID.4.jpg" alt="">
+            <div class="details">
+                <h1> <a href="">Volkswagen ID.4</a> </h1>
+                <p></p>
+                <p>54,600$</p>
+
+                <div class="carBtn">
+                    <button class="addCrt">
+                        Add to Cart
+                    </button>
+                    <button class="buy">
+                        Buy Now
+                    </button>
+                </div>
+            </div>
+        </div>
+
+
+    </div>
+
+
+    <footer>
+        <div class="footerLeft">
+            <img src="../images//logo.png" alt="">
+            <p>Your Car, Your Journey</p>
+        </div>
+        <div class="footerRight">
+            <div class="footerUpper">
+                <ul>
+                    <li>About Us</li>
+                    <li>How it works</li>
+                    <li>Services</li>
+                    <li>Contact</li>
+                    <li>Why us?</li>
+                    <li>signup</li>
+                </ul>
+            </div>
+
+
+            <div class="footerLower">
+
+            </div>
+        </div>
+        <div class="socials">
+            <p>Follow us on our social medias</p>
+            <div class="icons">
+                <i class="fa-brands fa-facebook"></i>
+                <i class="fa-brands fa-instagram"></i>
+                <i class="fa-brands fa-discord"></i>
+                <i class="fa-brands fa-twitter"></i>
+            </div>
+
+
+    </footer>
+
+    <script>
+        document.addEventListener('DOMContentLoaded', function () {
+            const categoryButtons = document.querySelectorAll('.categoryButton');
+
+            categoryButtons.forEach(button => {
+                button.addEventListener('click', function () {
+
+                    categoryButtons.forEach(btn => {
+                        btn.classList.remove('active');
+                    });
+
+                    button.classList.add('active');
+
+                    const containerId = button.id + 'Container';
+                    const container = document.getElementById(containerId);
+                    container.scrollIntoView({ behavior: 'smooth' });
+                });
+            });
+        });
+
+
+        document.addEventListener("DOMContentLoaded", function () {
+            var menuBtn = document.getElementById("menu");
+            var nav = document.querySelector(".responsiveNav");
+
+
+            function toggleNav() {
+                if (nav.style.display === "flex") {
+                    nav.style.display = "none";
+                } else {
+                    nav.style.display = "flex";
+                }
+            }
+
+         
+            menuBtn.addEventListener("click", function (event) {
+                event.stopPropagation(); 
+                toggleNav();
+            });
+
+        
+            document.addEventListener("click", function (event) {
+                if (event.target !== nav && event.target !== menuBtn && !nav.contains(event.target)) {
+                    nav.style.display = "none";
+                }
+            });
+        });
+
+    </script>
+
 </body>
 
 </html>
