--- a/pages/welcome.html
+++ b/pages/welcome.html
@@ -13,16 +13,27 @@
 
 <body>
 
+  <div class="responsiveNav">
+    <ul>
+        <li><a href="welcome.html">Home</a></li>
+        <li><a href="sellingCars.html">Buy Car</a></li>
+        <li><a href="rentingCars.html">Rent Car</a></li>
+        <li><a href="profile.html">Profile</a></li>
+        <li><a href="">Cart</a></li>
+    </ul>
+
+</div>
+
   <nav>
 
 
     </div>
-    <button class="menu">
+    <button class="menu" id="menu">
       <i class="fa-solid fa-bars"></i>
     </button>
 
 
-    <img src="../images//logo.png" alt="">
+    <img src="../images/logo.png" alt="">
     <div class="navItems">
       <ul>
 
@@ -33,7 +44,7 @@
     </div>
     <div class="profile">
       <i class="fa-solid fa-cart-shopping"></i>
-      <a href="">
+      <a href="profile.html">
         <i class="fa-solid fa-user"></i>
         userName here
       </a>
@@ -45,6 +56,7 @@
 
     <div class="slide">
       <div class="item" style="background-image: url(../images/Mercedes-Benz.jpg);">
+
         <div class="overlay"></div>
         <div class="content">
 
@@ -300,6 +312,32 @@
 
 
   <script>
+ document.addEventListener("DOMContentLoaded", function () {
+            var menuBtn = document.getElementById("menu");
+            var nav = document.querySelector(".responsiveNav");
+
+
+            function toggleNav() {
+                if (nav.style.display === "flex") {
+                    nav.style.display = "none";
+                } else {
+                    nav.style.display = "flex";
+                }
+            }
+
+         
+            menuBtn.addEventListener("click", function (event) {
+                event.stopPropagation(); 
+                toggleNav();
+            });
+
+        
+            document.addEventListener("click", function (event) {
+                if (event.target !== nav && event.target !== menuBtn && !nav.contains(event.target)) {
+                    nav.style.display = "none";
+                }
+            });
+        });
 
   </script>
   <script src="../JS/slider.js"></script>
