--- a/pages/landing.html
+++ b/pages/landing.html
@@ -21,7 +21,7 @@
         </button>
 
 
-        <img src="../images//logo.png" alt="">
+        <p class="logo">Auto<span>Nation</span></p>
         <div class="navItems">
             <ul>
 
@@ -39,9 +39,10 @@
     <section class="home">
 
         <div class="homeTxt">
-            <h1>The Open Road Awaits</h2>
-                <p>Your Car, Your Journey</p>
+            <h1>Find Your Freedom</h1>
+            <p>Drive the Car of Your Dreams</p>
         </div>
+
         <img src="../images//homeImage.jpg" alt="">
     </section>
 
@@ -75,7 +76,7 @@
     </section>
 
     <h1 style="margin-top: 80px;margin-left: 40px;">About Us</h1>
-    
+
     <section class="aboutus">
 
 
@@ -92,7 +93,10 @@
         </div>
 
         <div class="mapContainer"></div>
-        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d184551.90977225296!2d-79.542867141322!3d43.718370958199856!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x89d4cb90d7c63ba5%3A0x323555502ab4c477!2sToronto%2C%20ON%2C%20Canada!5e0!3m2!1sen!2snp!4v1711115579072!5m2!1sen!2snp" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+        <iframe
+            src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d184551.90977225296!2d-79.542867141322!3d43.718370958199856!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x89d4cb90d7c63ba5%3A0x323555502ab4c477!2sToronto%2C%20ON%2C%20Canada!5e0!3m2!1sen!2snp!4v1711115579072!5m2!1sen!2snp"
+            width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"
+            referrerpolicy="no-referrer-when-downgrade"></iframe>
     </section>
 
     <section class="contact">
@@ -118,7 +122,7 @@
 
     <footer>
         <div class="footerLeft">
-            <img src="../images//logo.png" alt="">
+            <p class="logo">Auto<span>Nation</span></p>
             <p>Your Car, Your Journey</p>
         </div>
         <div class="footerRight">
