--- a/pages/login.html
+++ b/pages/login.html
@@ -6,14 +6,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Login</title>
     <link rel="stylesheet" href="../CSS/login.css">
-    <style>
-
-    </style>
 </head>
 
 <body>
 
-    <form id="login" class="login" action="../php/jQFormsLogin.php method=" post">
+    <form id="login" class="login" action="../php/jQFormsLogin.php" method="post">
         <h3>Login</h3>
         <input type="email" name="email" id="email" placeholder="Email" required aria-label="Email"
             aria-required="true">
