--- a/pages/register.html
+++ b/pages/register.html
@@ -13,33 +13,28 @@
 
 <body>
 
-    <!-- <h1>Create an Account</h1> -->
-    <form id="register" class="register" action="../php/jQFormsAddUser.php" method="POST">
+    <form id="register" class="register" action="../php/jQFormsRegister.php" method="POST">
 
         <div class="name">
             <input type="text" id="firstName" name="firstName" placeholder="First name" maxlength="45"
                 title="Enter your first name here." required>
 
-
             <input type="text" id="lastName" name="lastName" placeholder="Last name" required maxlength="45"
                 title="Enter your last name here">
-
         </div>
 
         <div class="contact">
             <input type="email" name="email" placeholder="Email" pattern="[a-z0-9._%+-]+@[a-z0-9.-]+\.[a-z]{2,4}$"
-                required pattern="[a-z0-9._%+-]+@[a-z0-9.-]+\.[a-z]{2,4}$">
+                required>
 
             <input type="tel" id="phone" name="phone" placeholder="Phone number" required
                 pattern="[0-9]{3}-[0-9]{3}-[0-9]{4}" title="111-111-1111">
-
         </div>
 
         <div class="password">
             <input type="password" name="password" placeholder="Password" minlength="8" required>
             <input type="password" name="retype_password" placeholder="Re-type password" minlength="8" required>
         </div>
-
 
         <label for="dob">Date of Birth:</label>
         <div class="dob">
@@ -48,7 +43,6 @@
         </div>
 
         <label for="province">Province:</label>
-
         <div class="address">
             <select id="province" name="province" required>
                 <option value="" disabled selected>Select your province</option>
@@ -70,12 +64,11 @@
         </div>
 
         <button id="submit" class="registerBtn" type="submit">Register</button>
-        <p>Already have an account? <a href="login.html">login</a></p>
+        <p>Already have an account? <a href="login.html">Login</a></p>
 
     </form>
 
-
-    <script href="../js/register.js"></script>
+    <script src="../js/register.js"></script>
 </body>
 
 </html>
